--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,29 +1,31 @@
 parameters:
+    phpugl_twitter_bootstrap.config:
+        twitter_path: "%kernel.root_dir%/../vendor/twitter/bootstrap/twitter/bootstrap"
     phpugl_twitter_bootstrap.less:
-            out: "bootstrap.css"
-            files:
-                - "bootstrap.less"
-                - "responsive.less"
+        out: "bootstrap.css"
+        files:
+            - "bootstrap.less"
+            - "responsive.less"
     phpugl_twitter_bootstrap.images:
-            files:
-                - "glyphicons-halflings.png"
-                - "glyphicons-halflings-white.png"
+        files:
+            - "glyphicons-halflings.png"
+            - "glyphicons-halflings-white.png"
     phpugl_twitter_bootstrap.javascript:
-            out: "bootstrap.js"
-            files:
-                - "bootstrap-transition.js"
-                - "bootstrap-alert.js"
-                - "bootstrap-modal.js"
-                - "bootstrap-dropdown.js"
-                - "bootstrap-scrollspy.js"
-                - "bootstrap-tab.js"
-                - "bootstrap-tooltip.js"
-                - "bootstrap-popover.js"
-                - "bootstrap-button.js"
-                - "bootstrap-collapse.js"
-                - "bootstrap-carousel.js"
-                - "bootstrap-typeahead.js"
-                - "bootstrap-affix.js"
+        out: "bootstrap.js"
+        files:
+            - "bootstrap-transition.js"
+            - "bootstrap-alert.js"
+            - "bootstrap-modal.js"
+            - "bootstrap-dropdown.js"
+            - "bootstrap-scrollspy.js"
+            - "bootstrap-tab.js"
+            - "bootstrap-tooltip.js"
+            - "bootstrap-popover.js"
+            - "bootstrap-button.js"
+            - "bootstrap-collapse.js"
+            - "bootstrap-carousel.js"
+            - "bootstrap-typeahead.js"
+            - "bootstrap-affix.js"
 
 
 services:
