--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,11 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.*",
-        "twitter/bootstrap": "*",
+        "symfony/symfony": ">=2.1,<2.3-dev",
         "leafo/lessphp" : "*"
+    },
+    "suggest": {
+        "twitter/bootstrap": "2.3.*"
     },
     "target-dir": "Phpugl/TwitterBootstrapBundle"
 }
