--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/symfony": ">=2.1,<2.3-dev",
-        "leafo/lessphp" : "*"
+        "leafo/lessphp" : "0.3.*"
     },
     "suggest": {
         "twitter/bootstrap": "2.3.*"
