--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,11 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": ">=2.1,<2.3-dev",
-        "leafo/lessphp" : "0.3.*"
+        "symfony/dependency-injection": "2.2.*",
+        "symfony/console": "2.2.*",
+        "symfony/config": "2.2.*",
+        "symfony/http-kernel": "2.2.*",
+        "leafo/lessphp": "0.3.*"
     },
     "suggest": {
         "twitter/bootstrap": "2.3.*"
