--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "symfony/dependency-injection": "~2.2.*",
-        "symfony/console": "~2.2.*",
-        "symfony/config": "~2.2.*",
-        "symfony/http-kernel": "~2.2.*",
+        "symfony/dependency-injection": "2.*",
+        "symfony/console": "2.*",
+        "symfony/config": "2.*",
+        "symfony/http-kernel": "2.*",
         "leafo/lessphp": "0.3.*"
     },
     "suggest": {
